# poetry-strip-comments

./: pyproject.toml
