[tool.poetry]
name = "poetry-strip-comments"
version = "0.1.0"
description = "Poetry plugin that strips comments from resulting .whl files"
authors = ["Patrick Casey <patrick.casey1@outlook.com>"]
readme = "README.md"
packages = [{include = "poetry_strip_comments"}]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.264"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
